# Fall2021

./: .gitignore  CMakeLists.txt  README.md  annotated.html  array2d_8h.html  assignment0.html  assignment1.html  assignment2.html  assignment3.html  assignment4.html  assignment5.html  assignment6.html  assignments.html  bbh_8cpp.html  box_8h.html  build-discovery.sh  camera_8h.html  classArray2d.html  classDartsException.html  classImage3f.html  classProgress.html  classRange.html  classRange_1_1Iterator.html  class_array2d.html  class_camera.html  class_darts_exception.html  class_darts_factory.html  class_dielectric.html  class_diffuse_light.html  class_factory.html  class_image3f.html  class_independent.html  class_lambertian.html  class_material.html  class_metal.html  class_progress.html  class_quad.html  class_range.html  class_range_1_1_iterator.html  class_sampler.html  (+66 more)
.github/workflows/: mac-linux.yml  windows.yml
cmake/: DartsConfig.cmake
documentation/: CMakeLists.txt  Doxyfile-mcss  Doxyfile.in  assignment0.md  assignment1.md  assignment2.md  assignment3.md  assignment4.md  assignment5.md  assignment6.md  assignments.md  conf.py  credits.md  darts-overview.md  discovery-tutorial.md  getting-started.md  modules.md  schedule.md  syllabus.md
include/darts/: array2d.h  box.h  camera.h  common.h  factory.h  fwd.h  image.h  json.h  material.h  mesh.h  parallel_for.h  progress.h  ray.h  sampler.h  sampling.h  scene.h  sphere.h  surface.h  surface_group.h  test.h  transform.h  triangle.h  vec.h
reports/assignment0/: report.html
reports/assignment1/: report.html
reports/assignment2/: report.html
reports/assignment3/: report.html
reports/assignment4/: report.html
reports/assignment5/: report.html
scenes/assignment1/: 01_plane.json  02_balls.json  03_refl.json  04_refr.json  05_quad-light.json  06_jensen_box.json
scenes/assignment2/: ajax-simple.json  ajax-white.json  buddha-box.json  bunny-dragons.json  loewenfeld-in-box.json  loewenfeld-white.json  nefertiti-white.json  simple-geometry.json  sponza-buddha.json
scenes/assignment3/: ajax-textured.json  blend.json  checker.json  constant-cornell-box.json  earth.json  fresnel_blend.json  loewenfeld-textured.json  nefertiti-textured.json  teapot.json  textured-box.json
scenes/assignment4/: ajax-ao.json  ajax-normals.json  blinn_phong.json  odyssey_mats.json  phong.json  test_materials.json  veach_mats.json
scenes/assignment5/: glossy-cornell-box.json  glossy-cornell-box_mats.json  glossy-cornell-box_mis.json  glossy-cornell-box_nee.json  jensen_box_mats.json  jensen_box_mis.json  jensen_box_nee.json  odyssey_mis.json  odyssey_mixture.json  odyssey_nee.json  odyssey_triangle_mats.json  odyssey_triangle_mis.json  odyssey_triangle_nee.json  test_surfaces.json  veach_mis.json  veach_mixture.json  veach_nee.json
src/: common.cpp  darts.cpp  darts_tutorial0.cpp  darts_tutorial1.cpp  example_scenes.cpp  image.cpp  img_avg.cpp  img_compare.cpp  parser.cpp  progress.cpp  scene.cpp
src/materials/: dielectric.cpp  diffuse_light.cpp  lambertian.cpp  material.cpp  metal.cpp
src/samplers/: independent.cpp
src/surfaces/: bbh.cpp  mesh.cpp  quad.cpp  sphere.cpp  surface.cpp  surface_group.cpp  triangle.cpp
src/tests/: intersection_test.cpp  material_sample_test.cpp  surface_sample_test.cpp  test.cpp
